Fix not being able to remember external protocol handler Allow state.

Fixes a regression introduced in r503375 where pressing 'Always open
these types of links in the associated app' would have no effect, when
opening an external protocol handler. This bug only affects new profiles
created after M63.

The root cause was actually not r503375, but r448213, which added a
check preventing new entries from being written if the list was empty
(in order to avoid writing to Preferences pre-migration). This
migration code has been removed (also in r503375) so it is safe to
remove this check.

Bug: 788431
Change-Id: I39bbeb604dad081a2b27dd231b126a7cb525be81
Reviewed-on: https://chromium-review.googlesource.com/831317
Reviewed-by: Ben Wells <benwells@chromium.org>
Commit-Queue: Matt Giuca <mgiuca@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524854}
Former-commit-id: 6aaf64152ea8c778758cd4f85b954a1a278a3159